# orthanc-aws-sqs-plugin

./: .dockerignore  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: tests.yml
cmake/: OrthancPluginSDK.cmake
docker/: Dockerfile.build
docs/: architecture.md  curl-error-27-investigation.md  example-orthanc.json
src/: Configuration.cpp  Configuration.h  Logging.cpp  Logging.h  Plugin.cpp  S3Downloader.cpp  S3Downloader.h  S3EventParser.cpp  S3EventParser.h  SqsPoller.cpp  SqsPoller.h
tests/: CMakeLists.txt  configuration_test.cpp  s3_event_parser_test.cpp
